# ruTS-API

./: .pre-commit-config.yaml  .travis.yml  LICENSE.txt  Makefile  Pipfile  Procfile  README.md  pyproject.toml  release.sh  setup.cfg
api/: main.py
api/routers/: basic_stats.py  datasets.py  diversity_stats.py  extractors.py  morph_stats.py  readability_stats.py
tests/: test_basic_stats.py  test_datasets.py  test_diversity_stats.py  test_extractors.py  test_morph_stats.py  test_readability_stats.py
