[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ruts-API"
version = "0.5.0"
homepage = "https://ruts-api.herokuapp.com/"
repository = "https://github.com/SergeyShk/ruTS-API"
documentation = "https://ruts-api.herokuapp.com/docs"
authors = ["Шкарин Сергей <kouki.sergey@gmail.com>"]
maintainers = ["Шкарин Сергей <kouki.sergey@gmail.com>"]
description = "API для библиотеки ruTS"
license = "MIT"
keywords = ["API", "FastAPI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ruts = "*"
fastapi = "*"
gunicorn = "*"
uvicorn = "*"
httpx = "*"
importlib-metadata = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "*"
ruff = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.black]
target-version = ["py38"]
line-length = 99
color = true

[tool.isort]
py_version = 38
line_length = 99
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = 3.8
files = ["api", "tests"]
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
line-length = 99
select = ["A", "B", "C", "E", "F", "N", "Q", "W", "UP"]
ignore = ["E402", "E501", "B904"]
format = "grouped"
exclude = ["*.md"]
show-source = true

[tool.ruff.mccabe]
max-complexity = 18

[tool.pytest.ini_options]
addopts = "-vv -x --lf"
testpaths = ["tests"]